@@ -77,7 +77,7 @@
               android:imeOptions="actionDone"
               android:maxLength="10"
               android:text="@={bottomsheet.inputLive}"
-              app:onDoneClickInSoftKeyboard="@{() -> bottomsheet.save()}" />
+              app:onDoneClickInSoftKeyboard="@{() -> bottomsheet.dismiss()}" />
 
           </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/action_save"
-            android:onClick="@{() -> bottomsheet.save()}" />
+            android:onClick="@{() -> bottomsheet.dismiss()}" />
 
         </LinearLayout>
 
